# Copyright 2021 Florian Weßel <florianwessel@gmx.net>.
# SPDX-FileCopyrightText: 2021 Florian Weßel <florianwessel@gmx.net>
#
# SPDX-License-Identifier: LGPL-2.1-or-later

find_package(Qt5Test 5.13 REQUIRED)

###############################################################################
# Subdirectories
###############################################################################
add_subdirectory(multimedia_plugin)
